# gym_examples

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  hyperparameters.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  testing.ipynb
.github/: rename_project.sh
gym_examples/: __init__.py  __main__.py  base.py  cli.py
gym_examples/warhammer40k/: __init__.py
gym_examples/warhammer40k/envs/: warhammer40k.py
gym_examples/warhammer40k/model/: model.py
gym_examples/warhammer40k/model/dqn/: agent.py  dqn.py
runs/: warhammer40k.pt
tests/: test_base.py
