[project]
name = "warhammer40k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
    "pygame",
    "numpy",
    "torch",
    "tqdm",
    "plotly==5.24.1",
    "pandas",
    "matplotlib",
    "typer",
    "pyyaml",
    "jupyter>=1.1.1",
]
